<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ModernMum</string>
    <string name="btnregister">Register</string>
    <string name="action_settings">Settings</string>
    <string name="btnlogin">login</string>
    <string name="last">Names</string>
    <string name="email">Email Address</string>
    <string name="Password">Password</string>
    <string name="phone">Phone Number</string>
    <string name="loce">Location</string>
    <string name="title_activity_register_screen">RegisterScreenActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login_screen">LoginScreenActivity</string>
    <string name="btnsubmit">Submit</string>
    <string name="btnback">back</string>
    <string name="btnselect">Select a photo</string>
    <string name="btnupload">post photo</string>
    <string name="chose">Select a picture and post</string>
    <string name="btnup">Upload</string>
    <string name="des">show password</string>
    <string name="stroller">Baby Strollers</string>
    <string name="event">Events</string>
    <string name="nipo">Baby Towels</string>
    <string name="diaper">Sandals</string>
    <string name="send">Send</string>
    <string name="lets">Lets Chat</string>
    <string name="title_activity_advert_screen">AdvertScreenActivity</string>
    <string name="baby">Baby Products</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="btnadvert">Advertise</string>
    <string name="btnchat">Chat</string>
    <string name="btntips">Tips</string>
    <string name="btnbuy">Buy</string>
    <string name="location">Location</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_contact_screen">ContactScreenActivity</string>
    <string name="title_activity_advtwo_screen">AdvtwoScreenActivity</string>
    <string name="title_activity_event_screen">EventScreenActivity</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_activity_pro">ProActivity</string>
    <string-array name="products">
        <item>Choose aproduct</item>
        <item> Baby Stroller</item>
        <item>Babys Romper</item>
        <item>Diaper Bag</item>
        <item>Diaper</item>
        <item>Play Gym</item>
        <item>Plush Duck Toy Baby Blanket </item>
        <item>Baby Rattle</item>
        <item>Baby Bottle Bank </item>
        <item>Sunscreen Lotion</item>
        <item>Pajamas,Leggings for Babies</item>
    </string-array>
    

</resources>
