<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/darkblue">
   
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/chose"
    android:textColor="@color/black"
    android:textSize="17sp"
    />

<EditText
    android:id="@+id/editText1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="Describe Your Item"
    android:inputType="textMultiLine" >

    <requestFocus />
</EditText>

	<ImageView android:id="@android:id/icon" 
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_weight="1" />

	<Button android:text="@string/btnselect" 
	    android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:onClick="pickPhoto" />

	<Button
	    android:id="@+id/btnpost"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/btnupload" />
	
</LinearLayout>
