<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/pink" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first" 
        android:textSize="13sp"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/etfirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="5"
        android:layout_marginTop="5dp" 
         android:background="@color/white">

     
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last"
        android:textSize="13sp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/etlast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="5"
        android:background="@color/white" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="13sp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/etregemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="5"
        android:inputType="textEmailAddress"
         android:background="@color/white" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Password"
        android:textSize="13sp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/etregpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="5"
        android:inputType="textPassword"
         android:background="@color/white" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Confirm Password" 
        android:textSize="13sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/etconfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="5" 
        android:background="@color/white"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone" 
        android:textSize="13sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/etphone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="5"
        android:background="@color/white" />
    
     <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/location"
        android:textSize="13sp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/etlocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="5" 
        android:background="@color/white"/>
    
    
    <RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <Button
        android:id="@+id/btnback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnsubmit"
        android:layout_alignBottom="@+id/btnsubmit"
        android:layout_alignParentRight="true"
      
        android:text="@string/btnback" />

   
    <Button
        android:id="@+id/btnsubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
       
        android:text="@string/btnsubmit" />

    </RelativeLayout>

</LinearLayout>
