<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightblue"
    android:orientation="vertical"
    android:paddingBottom="@dimen/loginfields"
     >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email" 
         android:textSize="22sp"
         android:layout_marginLeft="15dp"
        android:textColor="@color/black"
        android:layout_marginRight="17dp"/>

    <EditText
        android:id="@+id/etemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:ems="10"
        android:layout_marginLeft="15dp"
        android:inputType="textEmailAddress"
        android:layout_marginTop="5dp"
         android:layout_marginRight="17dp"/>
        
        

        <requestFocus />
 

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Password"
         android:textSize="22sp"
        android:textColor="@color/black" 
        android:layout_marginLeft="15dp"
         android:layout_marginRight="20dp"/>

    <EditText
        android:id="@+id/etpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" 
        android:background="@color/white" 
        android:layout_marginTop="5dp" 
        android:layout_marginLeft="15dp"
        android:layout_marginRight="20dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightblue"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnlogsubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
           
            android:layout_marginTop="131dp"
            android:text="@string/btnsubmit"
            android:layout_marginLeft="15dp" 
            android:layout_marginRight="20dp"/>

        <Button
            android:id="@+id/btnlogback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btnlogsubmit"
            android:layout_alignBottom="@+id/btnlogsubmit"
            android:layout_alignParentLeft="true"
           
            android:text="@string/btnback" 
            android:layout_marginLeft="15dp"
            android:layout_marginRight="20dp"/>

        <CheckBox
            android:id="@+id/chkpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/btnlogback"
            android:layout_alignParentTop="true"
            android:layout_marginTop="15dp"
            android:text="@string/des" 
            android:layout_marginLeft="15dp"
            android:layout_marginRight="20dp"/>
    </RelativeLayout>

</LinearLayout>
